--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
             box-sizing: border-box;
         }
 
-```
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         line-height: 1.6;
@@ -234,18 +233,20 @@
     }
     
     @media print {
+        @page { size: A4; margin: 1cm; }
         body {
             background: white;
             padding: 0;
+            font-size: 12pt; line-height: 1.3;
         }
-        
+        nav, footer, .no-print { display: none !important; }
         .cv-container {
             box-shadow: none;
             border-radius: 0;
         }
     }
 </style>
-```
+
 
 </head>
 <body>
