--- a/index.html
+++ b/index.html
@@ -256,16 +256,16 @@
             <h2>Senior Backend Developer & AI Expert</h2>
             <div class="contact-info">
                 <div class="contact-item">
-                    <span>📞</span>
+                    <span>Phone :</span>
                     <span>514-570-9861</span>
                 </div>
                 <div class="contact-item">
-                    <span>✉️</span>
+                    <span>email :</span>
                     <span>sylvaintremblay1999@outlook.com</span>
                 </div>
                 <div class="contact-item">
-                    <span>📍</span>
-                    <span>Greater Montreal Area, QC</span>
+                    <span>Location:</span>
+                    <span>Cowansville, QC</span>
                 </div>
             </div>
         </header>
@@ -352,7 +352,7 @@
                 <div class="job">
                     <div class="job-header">
                         <div class="job-title">Senior Backend Developer & Prompt Engineering Expert</div>
-                        <div class="job-company">Freelance/Consultant</div>
+                        <div class="job-company">Globalia - SmartBug Media</div>
                         <div class="job-period">January 2023 – Present</div>
                     </div>
                     <div class="job-description">
@@ -371,7 +371,7 @@
                 <div class="job">
                     <div class="job-header">
                         <div class="job-title">Senior Backend Developer</div>
-                        <div class="job-company">Web Agency</div>
+                        <div class="job-company">Webit Web Agency</div>
                         <div class="job-period">February 2021 – December 2022</div>
                     </div>
                     <div class="job-description">
