--- a/index.html
+++ b/index.html
@@ -233,11 +233,10 @@
     }
     
     @media print {
-        @page { size: A4; margin: 1cm; }
+        @page { size: letter; margin: 1cm; }
         body {
             background: white;
             padding: 0;
-            font-size: 12pt; line-height: 1.3;
         }
         nav, footer, .no-print { display: none !important; }
         .cv-container {
