--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     
 @media print {
   body {
-    font-size: 11pt;
+    font-size: 10pt;
     line-height: 1.4;
     font-family: Arial, sans-serif;
     color: #000;
@@ -246,12 +246,12 @@
     margin-top: 1.5em;
   }
 
-  header, footer, nav, .no-print {
+  footer, nav, .no-print {
     display: none;
   }
 
   @page {
-    size: A4;
+    size: letter;
     margin: 1.5cm;
   }
 }
